2011-07-19  Matt Johnson  <johnso87@crhc.illinois.edu>

	* libc/reent/sbrkr.c: Define _sbrk_r independently of the definition
	of MALLOC_PROVIDED.

2011-07-15  Yufeng Zhang  <yufeng.zhang@arm.com>

	* libc/stdio/vfwprintf.c (wcvt): Add a new parameter len of type
	int.  *length is set to the value of (rev - digits) regardless
	of whether _MB_CAPABLE is defined or not.  Replace BUF with len
	in calling _mbsnrtowcs_r and also in the loop where _MB_CAPABLE
	is not defined.
	(_VFWPRINTF_R): Call wcvt with an extra argument.  Call wcvt
	again with allocated new buffer if buf is not large enough for
	the conversion.
	* testsuite/newlib.stdio/stdio.exp: New.
	* testsuite/newlib.stdio/swprintf.c: Likewise.

2011-07-15  Matt Johnson  <johnso87@crhc.illinois.edu>

	* libc/stdio/fscanf.c (fscanf): Call _vfscanf_r instead of __svfscanf_r
	to make sure CHECK_INIT is called.
	(_fscanf_r): Ditto.
	* /libc/stdio/scanf.c (scanf): Ditto.
	(_scanf_r): Ditto.
	* libc/stdio/fwscanf.c (fwscanf): Call _vfwscanf_r instead of
	__svfwscanf_r to make sure CHECK_INIT is called.
	(_fwscanf_r): Ditto.
	* libc/stdio/wscanf.c (wscanf): Ditto.
	(_wscanf_r): Ditto.

2011-07-13  Hans-Peter Nilsson <hp@axis.com>

	* libm/complex/cacos.c: Use temporaries and correct sequencing
	error in previous reordering change.

2011-06-25  Andreas Becker  <becker@se-elektronic.de>

	* libc/time/mktime.c (mktime): Lock global timezone info while
	accessing it.

2011-06-14  Philip Munts  <phil@munts.net>

	* libc/time/asctime_r.c (asctime_r): Replace call to sprintf with call
	to siprintf.
	* libc/time/strftime.c: Define snprintf to sniprintf in multibyte case.
	* libc/time/tzset_r.c: Define sscanf to siscanf.

2011-06-14  Joseph Myers  <joseph@codesourcery.com>

	* configure.host: Don't handle ep9312, strongarm, xscale and thumb
	target names.
	* libc/machine/configure.in: Don't handle xscale target names.
	* libc/machine/configure: Regenerate.

2011-06-14  Craig Howland <howland@LGSInnovations.com>
